# termini

./: Cargo.toml  LICENSE  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser.rs
src/: capabilities.rs  lib.rs  parsing.rs  tests.rs
tests/: jfbterm  screen.linux-s  screen.putty-256color  screen.xterm-256color  screen.xterm-new  xterm-1002  xterm-1003  xterm-1005  xterm-1006  xterm-16color  xterm-88color  xterm-direct  xterm-direct16  xterm-direct2  xterm-direct256  xterm-hp  xterm-new  xterm-nic  xterm-noapp  xterm-sco  xterm-sun  xterm-utf8  xterm-vt220  xterm-vt52  xterm-x10mouse  xterm-x11hilite  xterm-x11mouse  xterms
